--- a/index.html
+++ b/index.html
@@ -5,50 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Loading</title>
-    <style>
-        @import url(https://fonts.google.com/?preview.text=&preview.text_type=custom);
-        *{
-            padding: 0;
-            margin: 0;
-            box-sizing: border-box;
-        }
-        body{
-            font-family: 'popins', sans-serif;
-            font-size: 16px;
-            width: 100%;
-            min-height: 100vh;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            background-color: #19191919;
-        }
-        h1{
-            font-size: 5rem;
-            color: #444;
-            position: relative;
-            text-transform: uppercase;
-
-        }
-        h1::before{
-            content: attr(data-text);
-            position: absolute;
-            top: 0;
-            left: 0;
-            color:  blue;
-            width: 100%;
-            overflow: hidden;
-            animation: load 12s linear infinite;
-
-        }
-        @keyframes load{
-            0%{
-                width: 0;
-            }
-            100%{
-                width: 100%;
-            }
-        }
-    </style>
+    <link rel="stylesheet" href="loading.css">
+    
 </head>
 <body>
     <h1 data-text="carregando...">carregando...</h1>
